<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerHeaderRoot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/drawer_header_bg"
    android:paddingHorizontal="20dp"
    android:paddingVertical="32dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardAppIcon"
        android:layout_width="72dp"
        android:layout_height="72dp"
        app:cardCornerRadius="36dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeWidth="0dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/desc_app_icon"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher" />

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/cardAppIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cardAppIcon"
        app:layout_constraintTop_toTopOf="@id/cardAppIcon">

        <TextView
            android:id="@+id/tvDrawerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tvDrawerSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:alpha="0.8"
            android:text="@string/nav_header_subtitle"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:lineSpacingExtra="2dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>